vercel web-analytics

--- a/themes/dictionary/layouts/partials/head.html
+++ b/themes/dictionary/layouts/partials/head.html
@@ -4,3 +4,8 @@
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
 <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+
+<script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
