--- a/layouts/partials/sidebar/left.html
+++ b/layouts/partials/sidebar/left.html
@@ -60,6 +60,9 @@
         <img src="/img/mp-weixin.png" alt="mp-weixin-qr-code" class="site-avatar">
         <div class="site-meta">微信扫一扫，关注公众号</p>
     </header>
+    <header>
+        {{ partial "widget/search-box.html" . }}
+    </header>
     <ol class="menu" id="main-menu">
         {{ $currentPage := . }}
         {{ range .Site.Menus.main }}
