--- a/layouts/partials/head/script.html
+++ b/layouts/partials/head/script.html
@@ -13,3 +13,14 @@
 
   gtag('config', 'G-J3202M1NNB');
 </script>
+
+<!-- baidu -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?7c9f0d4321f62887294134cb406ed39b";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
